syntax="proto3";
option go_package = ".;services";
//package services;

message ProdRequest {
  int32 prod_id = 1; //商品ID
}

message ProdResponse {
  int32 prod_stock = 1; //商品库存
}

service ProdService {
  rpc GetProductStock (ProdRequest) returns (ProdResponse);
}